add h1 and p tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Repo</title>
 </head>
 <body>
-    
+    <h1>My name is Didar alam</h1>
+    <P>I am computer Engineer</P>
 </body>
 </html>
